style.css
/* Reset */
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    overflow-x: hidden;
}

body {
    font-family: 'Open Sans', sans-serif;
    background-color: rgb(247, 247, 247);
    background-image: linear-gradient(rgb(247, 247, 247), rgb(226, 227, 230));
    color: rgb(34, 34, 34);
}

/* header styling */
.container {
    display: flex;
    justify-content: center;
    font-family: roboto;
    top: 0;
    width: 100%;
    height: 15vh;
    z-index: 2;
    position: fixed;
    overflow-y: hidden;
    background-color: rgba(208, 210, 211, 0.863);
    border-bottom: 1px solid rgb(94, 150, 182);
}

.left-side {
    display: flex;
    margin-right: auto;
    align-items: center;
    flex: 1 1 auto;
    justify-content: center;
    align-items: center;
    padding-left: 5%;
}
.left-side img {
    width: auto;
    max-height: 8vh;
}
    .left-side a {
        display: flex;
        justify-content: center;
        align-items: center;
        font-weight: 300;
        padding-right: 10%;
        font-size: 33px;
        text-emphasis: none;
        text-decoration: none;
        letter-spacing: .08em;
        color: black;
        margin-right: auto;
    }

    .right-side {
        display: flex;
        margin-left: auto;
        align-items: center;
        flex: 1 1 auto;
        padding-right: 5%;
    }
        .right-side a {
            font-size: 20px;
            justify-content: space-evenly;
            padding: 16px;
            margin-left: auto;
            text-emphasis: none;
            text-decoration: none;
            color: black;
        }

        .left-side a:hover, .right-side a:hover {
            color: rgba(22, 81, 121, 0.63);
        }

    /* hero portion styles */
.main {
    background-color: rgb(231, 229, 229);
    padding: 20%;
    background-image: url('images/jakub-kapusnak.jpg');
    height: 100vh;
    background-size: cover;
    background-position: center;
    overflow: hidden;
}

.main h2 {
    font-size: 200%;
    color: rgb(60,60,60);
    text-align: center;
}

/* compelling paragraph/elevator pitch section */
.fit-content {
    background-color: rgb(204, 201, 201);
    padding: 5%;
    padding-left: 10%;
    padding-right: 10%;
    margin-top: 3%
}
    .fit-content h2 {
        margin-top: 1%;
    }
    .fit-content p {
        margin-top: 2%;
    }
  
/* Used to remove dot-points from a list */
.card {
  padding: 2rem;
  background-color: white;
  border-radius: 5px;
  box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.2), 0 10px 10px -5px rgba(0, 0, 0, 0.2);
  height: auto;
  width: auto;
}

.card:hover, .card:focus {
    transform: translateY(-30px);
    transition: 0.8s ease-in-out;
    box-shadow: 0 10px 50px -5px rgba(0, 0, 0, 0.2), 0 30px 20px -5px rgba(0, 0, 0, 0.2);
}

.price {
  font-size: 2rem;
  font-weight: 300;
}

.pricing-name {
  text-transform: uppercase;
  letter-spacing: 2px;
  color: rgb(120,120,125);
  padding-top: 1.5rem;
}

.bg-sales {
    background-color: rgba(22, 81, 121, 0.63);
    padding: 5%;
    margin-bottom: 3%;
}

.clickable {
    margin: 1em;
    height: auto;
    width: auto;
    display: inline-block;
    background-color: white;
    color: rgb(107,105,105);
    border: 2px solid rgb(107,105,105);
    border-radius: 5px;
    text-decoration: none;
    cursor: pointer;
    font-size: 16px;
    padding: 2%;
}

.clickable:hover {
    background-color: rgb(107, 105, 105);
    border: 2px solid transparent;
    color: white;
}
.clickable2 {
    margin: 1em;
    height: auto;
    width: auto;
    display: inline-block;
    color: white;
    border: 2px solid rgb(216, 215, 215);
    border-radius: 5px;
    text-decoration: none;
    cursor: pointer;
    font-size: 16px;
    padding: 1%;
}
.clickable2:hover {
    background-color: rgba(80, 79, 79, 0.60);
}

/* about */

.about {
    display: flex;
    justify-content: center;
    align-items: center;
    padding-top: 5%;
}

.about-p {
    text-align: left;
    padding-right: 5%;
}

/* contact */

.contact {
    padding: 10%;
}

/* social links, footer, and back to top button? */

.footer {
    padding: 2% 5% 2% 5%;
    font-size: 100%;
    color: rgb(232, 234, 235);
    background-color: rgb(47, 93, 107);
    border-top: 2px solid rgb(24, 43, 24);
}

/* utility classes */
.padded-1 {  padding: 2rem;   }
.padding-b {padding-bottom: 2%;}
.bottom-p {padding-bottom: 6%;}
.bottom-p2 {padding-bottom: 4%;}
.bottom-p3 {padding-bottom: 0;}
.padding-t {padding-top: 2%;}
.right {text-align: right;}
.center {text-align: center;}
.left {text-align: left;}
.margin-b {margin-bottom: 2%;}
.margin-t {margin-top: 3%;}
.line-height { line-height: normal;}

.bg-light {
    color: rgb(34, 34, 34);
    background-color: rgb(232, 233, 233);
}
.bg-light h2 {
    font-weight: lighter;
    text-align: center;
    font-size: 200%;
    padding-top: 5%;
    padding-bottom: 5%;
    border-top: 1px solid rgb(232, 233, 233);
    border-bottom: 1px solid rgb(232, 233, 233);
}

.bg-blue {
    background-color: rgba(22, 81, 121, 0.63);
    color: rgb(229, 226, 226);
}

.section {
    column-count: 3;
    column-gap: 5px;
    padding: 0 2% 2% 2%;
}

.section h2 {
    font-weight: lighter;
}

.bg-image {
    background-size: cover;
    background-position: center;
    max-width: 50%;
    padding: 15%;
    border-radius: 5px;
    box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.2), 0 10px 10px -5px rgba(0, 0, 0, 0.2);
  
  }

  .bg-img {
    background-color: rgb(192, 192, 192);
    background-size: cover;
    background-position: center;
  }

  .overlay {
    min-height: 12rem;
    padding: 3rem 1rem;
    background-color: rgba(0, 0, 0, 0.4);
    color: white;
  }

  .overlay2 {
    min-height: 12rem;
    padding: 3rem 1rem;
    background-color: rgba(0, 0, 0, 0.5);
    color: white;
  }

  .overlay h2, .overlay2 h2 {
    font-size: 26px;
  }
/* ... */

